[gd_scene load_steps=6 format=3 uid="uid://btqme6oqe5htg"]

[ext_resource type="Theme" uid="uid://daiaoav5l0g38" path="res://Theme.tres" id="1_xn6n0"]
[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="2_0xx6u"]
[ext_resource type="Script" path="res://scripts/exitButton.gd" id="2_wm00h"]
[ext_resource type="Texture2D" uid="uid://fab1s6cuanak" path="res://Assets/background.png" id="3_aqhuc"]
[ext_resource type="PackedScene" uid="uid://cf251x3jljtha" path="res://Scenes/SettingsPage.tscn" id="5_dcajn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xn6n0")
script = ExtResource("2_0xx6u")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_aqhuc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Memory Matching Madness
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 12

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "NEW GAME"

[node name="How To Play" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "HOW TO PLAY"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "SETTINGS"

[node name="Exit Game" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "EXIT GAME"
script = ExtResource("2_wm00h")

[node name="SettingsPage" parent="." instance=ExtResource("5_dcajn")]
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButtons/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButtons/How To Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButtons/Exit Game" to="MarginContainer/VBoxContainer/MenuButtons/Exit Game" method="_on_pressed"]
[connection signal="SettingsBtnPress" from="SettingsPage" to="." method="_on_settings_page_settings_btn_press"]
